crates/keron-lang/tests/corpus/errors/check/list_annotation_mismatch.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `String`, found `Int`
  --> 1:25
  |
1 | val xs: List<String> = [1, 2, 3]
  |                         ^
